changed some language

--- a/sequestration/seq_data_transfer_tutorial.ipynb
+++ b/sequestration/seq_data_transfer_tutorial.ipynb
@@ -119,7 +119,7 @@
    "id": "20c3e365",
    "metadata": {},
    "source": [
-    "## Part 1: Download Unprocessed Metadata\n",
+    "## Part 1: Download Files\n",
     "---\n",
     "The Gen3-MIDRC team will be uploading metadata files to [ValidateStaging](https://validatestaging.midrc.org/). \n",
     "\n",
@@ -225,6 +225,7 @@
     "- For more information: https://gen3.org/resources/user/submit-data/#3-map-uploaded-files-to-a-data-file-node\n",
     "---\n",
     "In MIDRC, the `/submission` endpoint is hidden from the UI. To map files, login and navigate to https://validatestaging.midrc.org/submission/files\n",
+    "\n",
     "\n",
     "![submission_files_2-2.png](attachment:submission_files_2-2.png)"
    ]
