updated sdp notebook

--- a/sequestration/seq_data_preparation.ipynb
+++ b/sequestration/seq_data_preparation.ipynb
@@ -17,9 +17,9 @@
     "\n",
     "In MIDRC, some of the data is sequestered for the sake of validation and testing, which will provide a valuable resource for data science challenges and a path to long-term sustainability through industry support for translation to - and approval of - clinical use which will impact public health worldwide.\n",
     "\n",
-    "To learn more about MIDRC, please visit: www.midrc.org\n",
+    "To learn more about MIDRC, please visit [www.midrc.org](https://www.midrc.org).\n",
     "\n",
-    "If you would like to learn more about sequestration, there is a MIDRC Seminar on the topic: https://www.youtube.com/watch?v=53g74qIdOp8"
+    "If you would like to learn more about sequestration, there is a MIDRC Seminar on the topic: [https://www.youtube.com/watch?v=53g74qIdOp8](https://www.youtube.com/watch?v=53g74qIdOp8)"
    ]
   },
   {
@@ -27,7 +27,7 @@
    "id": "8cbcffe2",
    "metadata": {},
    "source": [
-    "### Getting Started: Locally\n",
+    "## Getting Started: Locally\n",
     "We must first upload our ValidateStaging credentials to the utilityvm. \\\n",
     "The credentials will be used to configure our gen3 profile and will later be used to upload the sequestration data file to [ValidateStaging](https://validatestaging.midrc.org/).\n",
     "\n",
@@ -44,7 +44,9 @@
     "# Upload your ValidateStaging credentials to the VM\n",
     "import sys, os\n",
     "# this is the path to your credentials file LOCALLY, to be uploaded to the VM\n",
-    "# they should be of the form \"midrc-validatestaging-credentials.json\"\n",
+    "# they should be of the form \"midrc-validatestaging-credentials.json\" \n",
+    "# as to note confuse them with credentials for other environments\n",
+    "\n",
     "user=\"\"\n",
     "cred_path = \"/Users/{}/Downloads/midrc-validatestaging-credentials.json\".format(user) \n",
     "os.system(\"rsync -rP {} utilityvm.midrc.csoc:~/wd/creds/midrc-validatestaging-credentials.json\".format(cred_path))"
@@ -55,11 +57,11 @@
    "id": "bc5c1e21",
    "metadata": {},
    "source": [
-    "### Getting Started: In the VM\n",
+    "## Getting Started: In the VM\n",
     "\n",
     "### For the rest of this notebook, you will have to copy and paste into an `ipython3` shell in the utilityvm. \n",
     "\n",
-    "Before you begin, the metadata TSVs must already be pulled down from S3 into the VM. "
+    "Before you begin, the metadata TSVs must already be pulled down from S3 into the VM. Instructions for such are not included in this notebook."
    ]
   },
   {
@@ -159,6 +161,8 @@
    "id": "903eacf5",
    "metadata": {},
    "source": [
+    "### Case Metadata\n",
+    "\n",
     "We will collect the following metadata from the “case_ORG_DATE.tsv”:\n",
     "* submitter_id (case or patient ID)\n",
     "* project_id\n",
@@ -189,8 +193,17 @@
     "    cf['project_id']='Open-A1'\n",
     "elif org == 'RSNA':\n",
     "    cf['project_id']='Open-R1'\n",
-    "display(set(cf.project_id))\n",
-    "\n",
+    "display(set(cf.project_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bc1bafe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's take a peak at the case TSV we have just read into a DataFrame\n",
     "display(cf)"
    ]
   },
@@ -214,17 +227,14 @@
    "id": "b4d09599",
    "metadata": {},
    "source": [
+    "### Imaging Study Metadata\n",
+    "\n",
     "We will collect the following metadata from the “imaging_study_ORG_DATE.tsv”:\n",
     "\n",
-    "* submitter_id (case or patient ID)\n",
-    "* project_id\n",
-    "* age_at_index\n",
-    "* age_at_index_gt89\n",
-    "* covid19_postive\n",
-    "* ethnicity\n",
-    "* race\n",
-    "* sex\n",
-    "* site_id"
+    "* case_ids\n",
+    "* study_modality\n",
+    "* study_description\n",
+    "* body_part_examined"
    ]
   },
   {
@@ -240,8 +250,17 @@
     "imf = pd.read_csv(imagingfile,sep='\\t')\n",
     "len(list(set(imf.submitter_id)))\n",
     "imf['study_uid']=imf['submitter_id']\n",
-    "unique_studies = len(list(set(imf.submitter_id)))\n",
-    "\n",
+    "unique_studies = len(list(set(imf.submitter_id)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9725d051",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's take a peak at the imaging_study TSV we have just read into a DataFrame\n",
     "display(imf)"
    ]
   },
@@ -267,12 +286,12 @@
    "outputs": [],
    "source": [
     "# Let's make a subset of the imaging_study metadata \n",
-    "# This subset will also be used to \"flatten\" the modality metadata and contains only the needed properties \n",
+    "# This subset of the imaging_study TSV contains only the needed imaging_study metadata for sequestration\n",
     "st = copy.deepcopy(imf[['case_ids','study_modality','study_description','body_part_examined']].drop_duplicates(subset='case_ids'))  # 8020\n",
     "len(list(set(st.case_ids)))\n",
     "\n",
     "display(st)\n",
-    "old_sm=set(st.study_modality)\n",
+    "old_sm = set(st.study_modality)\n",
     "display(old_sm)"
    ]
   },
@@ -294,8 +313,8 @@
     "    st.at[stid,'study_modality'] = study_modality\n",
     "    \n",
     "display(st)\n",
-    "new_sm=set(st.study_modality)\n",
-    "display(new_sm)\n"
+    "new_sm = set(st.study_modality)\n",
+    "display(new_sm)"
    ]
   },
   {
@@ -330,7 +349,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## check lengths so no loss of case metadata \n",
+    "## check lengths to confirm there is no loss of case metadata \n",
     "assert(len(list(set(i.case_ids)))==len(list(set(cf.submitter_id))))"
    ]
   },
@@ -355,10 +374,21 @@
     "file = pd.merge(i,mf[['dataset','case_ids']],on='case_ids',how='left')\n",
     "file.rename(columns={'case_ids':'submitter_id','study_modality':'modality'},inplace=True)\n",
     "\n",
+    "display(set(file.dataset))\n",
+    "# We should expect to see 'Open','Seq', or 'NaN'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b12ad020",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# set the dataset for new cases (i.e., not in the masterlist) to Unassigned\n",
     "file.loc[file[\"dataset\"].isna(),\"dataset\"] = \"Unassigned\"\n",
     "\n",
-    "display(file)"
+    "display(set(file.dataset))"
    ]
   },
   {
@@ -369,7 +399,7 @@
    "outputs": [],
    "source": [
     "# get the number of Open, Seq, and Unassigned cases \n",
-    "# this will be used when emailing the UC-team the data is ready\n",
+    "# this will be used when emailing the UC team the data is ready\n",
     "\n",
     "display(file['dataset'].value_counts())"
    ]
@@ -409,26 +439,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path=\"{}/{}/{}\".format(seq_dir,org,file_name)\n",
+    "file_path = \"{}/{}/{}\".format(seq_dir,org,file_name)\n",
     "profile = \"midrc-validatestaging\"\n",
     "os.system(\"gen3-client upload --profile={} --upload-path={}\".format(profile,file_path))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0d2b8de7",
+   "id": "4335953f",
    "metadata": {},
    "source": [
-    "### Initialize Gen3 Classes"
+    "## Create 'dataset' and 'core_metadata_collections' nodes for batch"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5aacd991",
+   "id": "8f845fb8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "### Initialize Gen3 Classes\n",
     "import gen3\n",
     "from gen3.submission import Gen3Submission\n",
     "from gen3.auth import Gen3Auth\n",
@@ -442,25 +473,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4335953f",
-   "metadata": {},
-   "source": [
-    "## Create 'dataset' node for batch"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b4e34092",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create 'dataset' node for batch\n",
     "pid = \"SEQ_Restricted-DT\"\n",
     "prog,proj = pid.split(\"-\",1)\n",
-    "org=\"RSNA\"\n",
-    "date=\"20221206\"\n",
-    "batch_name = \"{}_{}\".format(org,date)\n",
     "dataset_txt = \"\"\"{\n",
     "        \"type\": \"dataset\",\n",
     "        \"data_contributor\": \"%s\",\n",
@@ -475,24 +496,9 @@
     "\n",
     "dataset_json = json.loads(dataset_txt)\n",
     "data = sub.submit_record(program=prog, project=proj, json=dataset_json)\n",
-    "print(data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "be96ec02",
-   "metadata": {},
-   "source": [
-    "## Create 'core_metadata_collections' node for batch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b47d9ade",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(data)\n",
+    "\n",
+    "# Create 'core_metadata_collections' node for batch\n",
     "cmc_txt = \"\"\"{\n",
     "        \"description\": \"Sequestration Data from the batch %s.\",\n",
     "        \"submitter_id\": \"%s\",\n",
@@ -541,7 +547,10 @@
    "id": "a6bb36dc",
    "metadata": {},
    "source": [
-    "# Notify UC-MIDRC team that the data is ready for sequestration "
+    "# Notify UC-MIDRC team that the data is ready for sequestration \n",
+    "\n",
+    "When emailing, it is a nice touch to add the the counts of 'Open', 'Seq', and 'Unassigned' cases. \\\n",
+    "This can be easily grabbed from `display(file['dataset'].value_counts())`"
    ]
   }
  ],
