--- a/temporal/calculate_days_from_study_to_covid_test.ipynb
+++ b/temporal/calculate_days_from_study_to_covid_test.ipynb
@@ -294,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study_props = ['type','project_id','submitter_id','cases.submitter_id','days_from_study_to_neg_covid_test','days_from_study_to_pos_covid_test']\n",
+    "study_props = ['type','project_id','submitter_id','cases.submitter_id','days_from_study_to_neg_covid_test','days_from_study_to_pos_covid_test','datasets.submitter_id']\n",
     "df = sdf[study_props]\n",
     "display(df)\n"
    ]
